metadata/unpackaged/objects/Individual.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Individuals</relationshipLabel>
        <relationshipName>Individuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Democheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Democheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFAR</label>
        <referenceTo>SFAR__c</referenceTo>
        <relationshipLabel>Individuals</relationshipLabel>
        <relationshipName>Individuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>